# carbonify

./: .gitignore  404.html  README.md  index.html  index.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: deploy-docs-github-pages.yml
.streamlit/: config.toml
best-practices/about/: index.html
best-practices/conventions/: index.html
carbonify/: __init__.py  basecarbone.py  utils.py
data/: README.md
data/raw/: agribalyse-synthese-tableschema.json  base-carbone(r)-schema.json
docs/: index.md
home/ethics/: index.html
home/faq/: index.html
home/installation/: index.html
home/quickstart/: index.html
home/releases/: index.html
notebooks/: 20210709 - Exploration base carbone.ipynb  20210717 - Comparaisons standards.ipynb
scripts/: analyze_flake8_linting.bat  analyze_pylint_linting.bat  apply_black_formatting.bat
search/: search_index.json
stylesheets/: extra.css
tutorials/notebook-test/: index.html
tutorials/quickstart/: index.html
