[tool.poetry]
name = "carbonify"
version = "0.1.0"
description = "Open source library for carbon accounting and Lifecycle analysis"
authors = ["Theo Alves Da Costa <theo.alvesdacosta@ekimetrics.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^227"
jupyter = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
